Added low-post and new account highlighting.

--- a/theme_example.css
+++ b/theme_example.css
@@ -70,6 +70,9 @@ body,.client a:link,.client a:visited {
     border:1px solid #333;
 }
 
+/* highlight avatars of users with fewer than 100 posts */
+.new-user-avatar  { border:1px solid #00A3E4; }
+
 /* images, if they show up */
 .oembed img {
     border:1px solid #333;
