--- a/theme_example.css
+++ b/theme_example.css
@@ -181,7 +181,7 @@ button:hover {
 .icon-Star,.icon-Unstar,.icon-rp-box {
     stroke:#00669E;
 }
-.icon-Unstar,.icon-rp-arrow,.icon-re.icon-x-circle {
+.icon-Unstar,.icon-rp-arrow,.icon-re,.icon-x-circle {
     fill:#00669E;
 }
 
