Different reposted post highlight
Just shifting from changing text color to background color.

--- a/theme_example.css
+++ b/theme_example.css
@@ -58,7 +58,7 @@ body,.client a:link,.client a:visited {
 
 /* reposted posts */
 .repostedPost {
-    color:#aaa;
+    background-color:#2B332C;
 }
 
 
